--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/technodeguy/reservations_API#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "csv-parse": "^5.5.0",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
   }
